--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/contactlistdb
+00
+spring.datasource.url=jdbc:mysql://root:PhyJHglwTSzyFSVkWKBAIiHGAmhukFzU@yamabiko.proxy.rlwy.net:22916/railway
 spring.datasource.username=root
-spring.datasource.password=SYSTEM
+spring.datasource.password=PhyJHglwTSzyFSVkWKBAIiHGAmhukFzU
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=8080
+server.port=8080 
