--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-00
-spring.datasource.url=jdbc:mysql://root:PhyJHglwTSzyFSVkWKBAIiHGAmhukFzU@yamabiko.proxy.rlwy.net:22916/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/contactlistdb
 spring.datasource.username=root
-spring.datasource.password=PhyJHglwTSzyFSVkWKBAIiHGAmhukFzU
+spring.datasource.password=SYSTEM
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=${PORT:8080}
+server.port=8080
+spring.security.user.name=admin
+spring.security.user.password=482c7099-2400-42e2-aaa3-84fda8ff1e08
+spring.jpa.open-in-view=false
+logging.level.org.springframework.security=DEBUG
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=1800000
